--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -9,6 +9,7 @@ gem 'composite_primary_keys'
 gem 'bootstrap-sass', '~> 3.3', '>= 3.3.7'
 gem 'simple_form', '~> 4.0', '>= 4.0.1'
 gem 'devise', '~> 4.5'
+gem 'bootstrap-generators'
 
 gem 'yaml_db'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
